<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/other">

        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_account_balance_black_24dp"
            android:title="个人中心" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_setting_white_24dp"
            android:title="@string/nav_setting" />

    </group>

    <item android:title="更多操作">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_about_us_white_24dp"
                android:title="@string/nav_about_us" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout_white_24dp"
                android:title="@string/nav_logout" />
        </menu>
    </item>


</menu>